F&GDEV/src/objects/Filing_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>FIA_Filing_Notes__c</fullName>
        <label>FIA Filing Notes</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FIA_Filing_Strategy_1__c</fullName>
        <label>FIA Filing Strategy 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIA_Filing_Strategy_2__c</fullName>
        <label>FIA Filing Strategy 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIA_Filing_Strategy__c</fullName>
        <label>FIA Filing Strategy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIA_Sales_Percentage__c</fullName>
        <label>FIA Sales Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FIA_Tier__c</fullName>
        <inlineHelpText>1 being the highest tier (highest percentage of sales).</inlineHelpText>
        <label>FIA Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IUL_Brokerage_Percentage__c</fullName>
        <label>IUL Brokerage Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IUL_Filing_Notes__c</fullName>
        <label>IUL Filing Notes</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IUL_Filing_Strategy_1__c</fullName>
        <label>IUL Filing Strategy 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IUL_Filing_Strategy_2__c</fullName>
        <label>IUL Filing Strategy 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IUL_Filing_Strategy__c</fullName>
        <label>IUL Filing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Filing</fullName>
                </value>
                <value>
                    <fullName>Compact Filing</fullName>
                </value>
                <value>
                    <fullName>Compact Dependent</fullName>
                </value>
                <value>
                    <fullName>Group Filing</fullName>
                </value>
                <value>
                    <fullName>Group Dependent</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>File &amp; Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IUL_Network_Marketing_Sales_Percentage__c</fullName>
        <label>IUL Network Marketing Sales Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IUL_Tier__c</fullName>
        <inlineHelpText>1 being the highest tier (highest percentage of sales).</inlineHelpText>
        <label>IUL Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYGA_Filing_Notes__c</fullName>
        <label>MYGA Filing Notes</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MYGA_Filing_Strategy_1__c</fullName>
        <label>MYGA Filing Strategy 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYGA_Filing_Strategy_2__c</fullName>
        <label>MYGA Filing Strategy 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Filing_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYGA_Filing_Strategy__c</fullName>
        <label>MYGA Filing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Filing</fullName>
                </value>
                <value>
                    <fullName>Compact Filing</fullName>
                </value>
                <value>
                    <fullName>Compact Dependent</fullName>
                </value>
                <value>
                    <fullName>Group Filing</fullName>
                </value>
                <value>
                    <fullName>Group Dependent</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>File &amp; Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYGA_Sales_Percentage__c</fullName>
        <label>MYGA Sales Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MYGA_Tier__c</fullName>
        <inlineHelpText>1 being the highest tier (highest percentage of sales).</inlineHelpText>
        <label>MYGA Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Filing Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FIA_Filing_Strategy_1__c</columns>
        <columns>FIA_Filing_Strategy_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FIA_Filing_Strategy</fullName>
        <columns>NAME</columns>
        <columns>FIA_Filing_Strategy_1__c</columns>
        <columns>FIA_Filing_Strategy_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>FIA Filing Strategy</label>
    </listViews>
    <listViews>
        <fullName>States_w_Filing_Strategy</fullName>
        <columns>NAME</columns>
        <columns>FIA_Filing_Strategy_1__c</columns>
        <columns>FIA_Filing_Strategy_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>States w Filing Strategy</label>
    </listViews>
    <nameField>
        <label>Filing Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filing Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FilingStrategy1_requiredN</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 $User.ByPassValidation__c = false,
  OR(ISBLANK(TEXT(FIA_Filing_Strategy_1__c)),
  ISBLANK(TEXT(MYGA_Filing_Strategy_1__c)),
  ISBLANK( TEXT(IUL_Filing_Strategy_1__c)))
)</errorConditionFormula>
        <errorMessage>Select atleast one filing stratedy</errorMessage>
    </validationRules>
</CustomObject>